<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tanjoodo.mapapp.MapView">
    <item
        android:id="@+id/action_update_status"
        android:orderInCategory="100"
        android:title="@string/action_update_status"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_group_list"
        android:orderInCategory="102"
        android:title="@string/action_view_group_list" />

    <item
        android:id="@+id/action_reset_filter"
        android:orderInCategory="103"
        android:title="@string/action_reset_filter"/>
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="200"
        android:title="@string/sign_out"
        app:showAsAction="never" />
</menu>
