<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tanjoodo.mapapp.SettingsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/screen_name_setting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_screen_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_screen_name_justification"
                android:textSize="4pt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:layout_marginTop="4pt"
                android:textSize="8pt"/>

            <EditText
                android:id="@+id/setting_change_password_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/old_password"
                android:layout_marginLeft="8pt"
                android:layout_marginStart="8pt"/>
            <EditText
                android:id="@+id/setting_change_password_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/new_password"
                android:layout_marginLeft="8pt"
                android:layout_marginStart="8pt"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_new_password"
                android:layout_marginLeft="8pt"
                android:layout_marginStart="8pt"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
